--- a/src/template.ejs
+++ b/src/template.ejs
@@ -4,12 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><%= data.name %></title>
+    <title><%= data.name %> Player Card | OneFootball</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/app.css">
+
+    <style>
+      body {
+        clubTeam.colors.mainColor
+      }
+    </style>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,9 +25,48 @@
     <![endif]-->
   </head>
   <body>
-    <h1>
-      TEST
-    </h1>
+    <div class="container">
+
+      <div class="player-card">
+        <div class="overlay">
+          <div class="row">
+            <div class="col-xs-4 text-center">
+              <img class="main-logo" src="assets/logo.png" alt="OneFootball">
+            </div>
+            <div class="col-xs-4 text-center"><h1 class="number"><%= data.number %></h1></div>
+            <div class="col-xs-4 text-center ">
+              <div class="logos">
+                <div class="logo player">
+                  <span class="sr-only">
+                    <translate>Player</translate>:
+                      &#32;<%= data.name %>
+                      &#32;<translate>from</translate>:
+                      &#32;<%= data.country %>
+                  </span>
+                </div>
+                &#32;
+                <div class="logo team">
+                  <span class="sr-only">
+                    <translate>Team</translate>:&#32;<%= data.clubTeam.name %>
+                  </span>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 text-center">
+              <p class="lastname">
+                <%= data.lastName %>
+              </p>
+            </div>
+          </div>
+        </div><!-- //overlay -->
+      </div><!-- //player-card -->
+
+    </div>
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
