--- a/src/app.less
+++ b/src/app.less
@@ -4,13 +4,14 @@
 // @team-img
 
 @base-text-color: hardlight(@brand-color, #fff);
-@base-font-size: 330px;
-@base-top-space: 50px;
+@base-font-size: 350px;
+@base-smaller-font: @base-font-size/5.5;
+@base-space: @base-font-size/7;
 @base-overlay-color: fadeout(@brand-color, 12%);
 
 .player-card {
   .margin-top-base {
-    margin-top: @base-top-space;
+    margin-top: @base-space;
   }
 
   font-family: 'pluto sans condensed regular','Helvetica Neue',Helvetica,sans-serif;
@@ -22,42 +23,41 @@
 
   &>.overlay {
     background-color: @base-overlay-color;
-    padding-bottom: @base-top-space;
-    padding-top: @base-top-space;
+    padding-bottom: @base-space;
+    padding-top: @base-space;
   }
 
   .main-logo {
     display: inline-block;
+    @media (max-width: 992px) {
+      margin-bottom: @base-space;
+    }
+    @media (min-width: 992px) {
+      float: left;
+      margin-left: @base-space;
+    }
   }
 
   .number {
     color: @base-text-color !important;
     font-size: @base-font-size;
-    margin: 0 0 0 0;
+    margin: -50px 0 0 0;
     line-height: 1;
     padding: 0;
-
-    /* Medium devices (desktops, 992px and up) */
-    @media (min-width: 992px) {
-      padding-top: @base-top-space;
-    }
   }
+
   .lastname {
     color: @base-text-color !important;
-    font-size: @base-font-size/5.5;
+    font-size: @base-smaller-font;
   }
 
   .logos {
-    width: 100%;
-    text-align: center;
+    @media (max-width: 992px) {
+      margin-bottom: @base-space;
+    }
     @media (min-width: 992px) {
-      width: 90%;
-      &.left {
-        margin: 0 0 0 10%;
-      }
-      &.right {
-        margin: 0 10% 0 0;
-      }
+      float: right;
+      margin-right: @base-space;
     }
     .logo {
       width: 100px;
